--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="C:\Users\91737\Desktop\portfolio\style1.css">
+  <link rel="stylesheet" href="style1.css">
   <!--<link rel="stylesheet" href="C:\Users\91737\Desktop\web development\style4.css">-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -31,7 +31,7 @@
     <div class="main-content">
 
       <div class="">
-        <img src="C:\Users\91737\Desktop\portfolio\element.jpg" width="300" height="300" alt="element">
+        <img src="element.jpg" width="300" height="300" alt="element">
       </div>
       <div class="sub-heading">
         Hi, I'm Divy ,
@@ -52,7 +52,7 @@
       </div>
 
       <div class="pic">
-        <img src="C:\Users\91737\Desktop\portfolio\pic.jpeg" width="300" height="300" alt="divy_img">
+        <img src="pic.jpeg" width="300" height="300" alt="divy_img">
       </div>
       <hr class="line">
       <div class="sub-heading2">
@@ -73,7 +73,7 @@
     <diV class="card-wrapper">
       <div class="card-header">
         <div class="pic">
-          <img src="C:\Users\91737\Desktop\portfolio\divy2.jpg" width=150px alt="divy_img">
+          <img src="divy2.jpg" width=150px alt="divy_img">
         </div>
         <hr>
         <h3 class="name">Divy Sharma</h3>
@@ -111,32 +111,32 @@
   <h3 id="skils_head">SKILLS</h3>
     <div class="container5">
     <div class="skills_column">
-      <img class="canva" src="C:\Users\91737\Desktop\portfolio\python.png" alt="python">
+      <img class="canva" src="python.png" alt="python">
       <h2 class="skills_title">Python</h2>
     </div>
       <div class="skills_column">
-        <img class="canva" src="C:\Users\91737\Desktop\portfolio\adobeillustrator.png" width="200px" height="200px" alt="Adobe Illustrator">
+        <img class="canva" src="adobeillustrator.png" width="200px" height="200px" alt="Adobe Illustrator">
         <h2 class="skills_title">Adobe</h2>
     </div>
         <div class="skills_column">
-          <img class="canva" src="C:\Users\91737\Desktop\portfolio\Canva.png" width="200px" height="200px" alt="canva">
+          <img class="canva" src="Canva.png" width="200px" height="200px" alt="canva">
           <h2 class="skills_title">Canva</h2>
 
       </div>
 
           <div class="skills_column">
-            <img class="canva" src="C:\Users\91737\Desktop\portfolio\html5.png" width="200px" height="200px" alt="canva">
+            <img class="canva" src="html5.png" width="200px" height="200px" alt="canva">
             <h2 class="skills_title">html</h2>
         </div>
 
             <div class="skills_column">
-              <img class="canva" src="C:\Users\91737\Desktop\portfolio\css3.png" width="200px" height="200px" alt="canva">
+              <img class="canva" src="css3.png" width="200px" height="200px" alt="canva">
               <h2 class="skills_title">css</h2>
 
           </div>
 
               <div class="skills_column">
-                <img class="canva" src="C:\Users\91737\Desktop\portfolio\java.png" width="200px" height="200px" alt="canva">
+                <img class="canva" src="java.png" width="200px" height="200px" alt="canva">
                 <h2 class="skills_title">javascript</h2>
               </div>
           </div>
